z-index fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -130,7 +130,7 @@ section {
 	margin-inline: auto;
 	padding-block: 4rem;
 	max-width: 700px;
-	z-index: 200;
+	z-index: 20;
 }
 .home-subsection::before {
 	content: '';
